--- a/Frontend/src/app/Components/sign-up/sign-up.component.html
+++ b/Frontend/src/app/Components/sign-up/sign-up.component.html
@@ -32,14 +32,23 @@
                             Contraseña Es Requerida
                         </div>
                     </div>
-                    <div class="input-group pt-2 justify-content-end">
-                        <button type="button" class="btn btn-link">¿Has Perdido La Contraseña?</button>
+                    <div class="input-group pt-2">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <fa-icon [icon]="Icons[3]"></fa-icon>
+                            </span>
+                        </div>
+                        <input type="password" class="form-control" placeholder="Email" aria-label="Email"
+                            aria-describedby="addon-wrapping" formControlName="Email" required>
+                        <div class="invalid-feedback justify-content-start">
+                            Email Es Requerido
+                        </div>
                     </div>
                     <div class="form-group pt-3 mb-0">
                         <button type="submit" class="btn btn-primary w-50 gradient" [disabled]="Loading">
                             <div [hidden]="Loading">
                                 <fa-icon [icon]="Icons[2]"></fa-icon>
-                                Entrar
+                                Registrarse
                             </div>
                             <div class="spinner-border text-light" role="status" [hidden]="!Loading">
                                 <span class="sr-only">Loading...</span>
@@ -47,7 +56,7 @@
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
-                        <a routerLink="/SignUp" routerLinkActive="active">¿No Tienes Cuenta?</a>
+                        <a routerLink="/Login" routerLinkActive="active">¿Tienes Cuenta?</a>
                     </div>
                 </form>
             </div>
