--- a/Frontend/src/app/app.component.sass
+++ b/Frontend/src/app/app.component.sass
@@ -1,8 +1,8 @@
-.full
-    height: 100%
-
 .navbar
     -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0 10px
     -moz-box-shadow: rgba(0, 0, 0, 0.8) 0 0 10px
     box-shadow: rgba(0, 0, 0, 0.8) 0 0 10px
     border-color: white
+
+.fill
+    flex: 1
