--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -2,7 +2,6 @@
 body, html
     margin: 0px
     height: 100%
-    overflow-y: hidden
     overflow-x: hidden
 
 *
@@ -16,3 +15,17 @@ body, html
 
 .full
     height: 100%
+
+.card
+    -webkit-border-radius: 10px
+    -moz-border-radius: 10px
+    border-radius: 10px
+    justify-content: space-between
+    background-color: transparent
+    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0 10px
+    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0 0 10px
+    box-shadow: rgba(0, 0, 0, 0.8) 0 0 10px
+    border-color: white
+
+.card-header
+    border-radius: 10px 10px 0 0
