--- a/Frontend/src/app/Components/login/login.component.sass
+++ b/Frontend/src/app/Components/login/login.component.sass
@@ -1,7 +1,6 @@
 .card
-  -webkit-border-radius: 10px
-  -moz-border-radius: 10px
   border-radius: 10px
+  border-color: white
 
 .card-header
   border-radius: 10px 10px 0 0
