[Fernando Araujo][10-17-2019] Image

--- a/Frontend/src/app/footer/footer.component.html
+++ b/Frontend/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer text-white">
   <div class="container-fluid content-container-fluid">
     <img src="https://image.flaticon.com/icons/svg/1832/1832056.svg" />
     <p>
