--- a/Frontend/src/app/footer/footer.component.scss
+++ b/Frontend/src/app/footer/footer.component.scss
@@ -5,10 +5,15 @@ $footer-padding: $spacer * 1.5;
 $footer-logo-height: 55px;
 
 .footer {
-  background-color: $footer-bg;
   border-top: $footer-border;
   text-align: center;
   padding: $footer-padding;
+  background: #2b5876;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4e4376, #2b5876);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4e4376, #2b5876);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   p {
     margin: 0;
