[Fernando Araujo][10-18-2019] views

--- a/Frontend/src/app/+profile/profile.component.html
+++ b/Frontend/src/app/+profile/profile.component.html
@@ -21,8 +21,8 @@
   <div class="col-11 pt-2">
       <div class="row w-100 pb-2">
           <ul class="nav nav-tabs justify-content-center w-100">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#">Proyectos</a>
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">Proyectos</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">Tareas</a>
@@ -42,6 +42,9 @@
                           the
                           bulk
                           of the card's content.</p>
+                  </div>
+                  <div class="card-footer text-center">
+                      <button class="btn btn-secondary">Ir al proyecto</button>
                   </div>
               </div>
           </div>
