--- a/Frontend/src/app/Components/home/home.component.sass
+++ b/Frontend/src/app/Components/home/home.component.sass
@@ -1,6 +1,9 @@
 .card
   border-radius: 10px
-  border-color: white
+  border-color: transparent
 
 .card-header
   border-radius: 10px 10px 0 0
+
+#collapse:focus, #collapse:active:focus, #collapse.active:focus
+  box-shadow: none !important
