--- a/Frontend/src/app/Components/login/login.component.html
+++ b/Frontend/src/app/Components/login/login.component.html
@@ -11,13 +11,13 @@
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text">
-                                <fa-icon [icon]="Icons[0]"></fa-icon>
+                                <fa-icon [icon]="Icons[3]"></fa-icon>
                             </span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Código Institucional" aria-label="Username"
+                        <input type="text" class="form-control" placeholder="Documento Identidad" aria-label="Username"
                             aria-describedby="addon-wrapping" formControlName="Username" required minlength="10">
                         <div class="invalid-feedback">
-                            Ingrese Código Institucional Válido
+                            Ingrese Documento Válido
                         </div>
                     </div>
                     <div class="input-group pt-2">
@@ -46,7 +46,7 @@
                         </button>
                     </div>
                     <div class="form-group pt-1 mb-0">
-                        <a routerLink="/SignUp" routerLinkActive="active">¿No Tienes Cuenta?</a>
+                        <a routerLink="/signup" routerLinkActive="active">¿No Tienes Cuenta?</a>
                     </div>
                 </form>
             </div>
