--- a/Frontend/src/app/Components/profile/profile.component.sass
+++ b/Frontend/src/app/Components/profile/profile.component.sass
@@ -6,18 +6,22 @@
   height: 140px
   width: 140px
 
+.cardwidth
+  width: 16rem
+  cursor: pointer
+
 @media (min-width: 576px) 
   .card-columns
-    column-count: 1
+    column-count: 2
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) 
   .card-columns
-    column-count: 2
+    column-count: 3
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) 
   .card-columns
-    column-count: 3
+    column-count: 4
 
 .card
   border-radius: 10px
