--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -15,3 +15,23 @@ body, html
 
 .full
     height: 100%
+
+@media (max-height: 600px)
+    .chat 
+        height: 450px
+
+@media (min-height: 601px)
+    .chat 
+        height: 550px
+
+@media (min-height: 700px)
+    .chat 
+        height: 650px
+
+@media (min-height: 800px) 
+    .chat 
+        height: 785px
+
+@media (min-height: 1024px) 
+    .chat 
+        height: 880px
