--- a/Frontend/src/app/Components/listconversations/listconversations.component.html
+++ b/Frontend/src/app/Components/listconversations/listconversations.component.html
@@ -1,6 +1,7 @@
 <ul class="list-group w-100 bg-transparent">
-    <button *ngFor="let item of Conversations | async" class="list-group-item bg-transparent d-flex justify-content-start align-items-center">
-        <img [src]="item.UrlImage" width="30" height="30">
-        <h6 className="text-center font-weight-bold text-white mb-0 ml-1">{{item.DisplayName}}</h6>
+    <button *ngFor="let item of Conversations | async" class="list-group-item bg-transparent d-flex justify-content-start align-items-center pr-1 pl-1" (click)="StartConversation(item.Members[0]._id)">
+        {{item.UrlImage}}
+        <img [src]="item.Members[0].UrlImage" width="30" height="30">
+        <p class="text-center font-weight-bold text-white mb-0 ml-1" style="font-size: 11px;">{{item.Members[0].DisplayName}}</p>
     </button>
 </ul>
