--- a/Frontend/src/app/Components/chat/chat.component.html
+++ b/Frontend/src/app/Components/chat/chat.component.html
@@ -12,18 +12,43 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-1 align-self-center">
+                    <div class="row justify-content-center">
+                        <button class="btn text-dark" type="button" (click)="Change()" [hidden]="(LoadingMessage | async)">
+                            <fa-icon [icon]="Icons[1]"></fa-icon>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card-body border-shadow overflow-auto" id="scroll">
-            Hola Mensajes
+            <div class="row animated fadeIn delay-500ms pt-1 align-items-center mx-0"
+                *ngFor="let item of Messages | async">
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
+                    *ngIf="!FilterBool(item)" />
+                <div class="col">
+                    <div class="row" [ngClass]="{'justify-content-end': FilterBool(item)}">
+                        <p class="px-1 font-weight-bold my-0">{{Filter(item)}}</p>
+                    </div>
+                    <div class="row" [ngClass]="{'justify-content-end': FilterBool(item)}">
+                        <p class="px-1 my-0">{{item.Message}}</p>
+                    </div>
+                </div>
+                <img [src]="FilterImage(item)" class="rounded-circle px-1" alt="Profile" height="40" width="40"
+                    *ngIf="FilterBool(item)" />
+            </div>
         </div>
         <div class="card-footer">
             <div class="input-group">
                 <textarea name="" class="form-control type_msg" placeholder="Type your message..." id="Message"
-                    style="resize: none;"></textarea>
+                    style="resize: none;" (input)="OnChange($event)" (keypress)="onKeyPress($event)"></textarea>
                 <div class="input-group-append">
-                    <button class="input-group-text send_btn">
-                            <fa-icon [icon]="Icons[0]"></fa-icon>
+                    <button class="input-group-text send_btn" (click)="PushMessage()"
+                        [disabled]="LoadingMessage | async">
+                        <fa-icon [icon]="Icons[0]" [hidden]="(LoadingMessage | async)"></fa-icon>
+                        <div class="spinner-border text-primary" role="status" [hidden]="!(LoadingMessage | async)">
+                            <span class="sr-only">Loading...</span>
+                        </div>
                     </button>
                 </div>
             </div>
