--- a/Frontend/src/styles.sass
+++ b/Frontend/src/styles.sass
@@ -17,21 +17,35 @@ body, html
     height: 100%
 
 @media (max-height: 600px)
-    .chat 
+    .chat
         height: 450px
 
 @media (min-height: 601px)
-    .chat 
-        height: 550px
+    .chat
+        height: 540px
 
 @media (min-height: 700px)
-    .chat 
+    .chat
         height: 650px
 
 @media (min-height: 800px) 
-    .chat 
+    .chat
         height: 785px
 
 @media (min-height: 1024px) 
-    .chat 
-        height: 880px
+    .chat
+        height: 850px
+
+::-webkit-scrollbar-track
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3)
+    background-color: #757F9A
+    border-radius: 10px
+
+::-webkit-scrollbar
+    width: 10px
+    background-color: #757F9A
+    border-radius: 10px
+
+::-webkit-scrollbar-thumb
+    border-radius: 10px
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44, rgb(122, 153, 217)), color-stop(0.72, rgb(73, 125, 189)), color-stop(0.86, rgb(28, 58, 148)))
