--- a/Frontend/src/app/Components/listusers/listusers.component.html
+++ b/Frontend/src/app/Components/listusers/listusers.component.html
@@ -4,7 +4,7 @@
             <div class="col">
                 <div class="input-group w-100">
                     <input class="form-control py-2 border-right-0 border bg-transparent" id="search" type="search"
-                        placeholder="Buscar por nombre" />
+                        placeholder="Buscar por nombre" (input)="ChangeInput($event)"/>
                     <span class="input-group-append">
                         <button class="btn btn-link border-left-0 border">
                             <fa-icon [icon]="Icons[0]"></fa-icon>
